apps/safeqbit-local-hq/sra-dev-demo/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sra-dev-demo
  labels:
    app.kubernetes.io/name: sra-dev-demo
    app.kubernetes.io/managed-by: flux
    cluster: safeqbit-local-hq
    backup.policy/velero: biweekly
